--- a/src/poiupv/vistes/Menu.fxml
+++ b/src/poiupv/vistes/Menu.fxml
@@ -16,7 +16,7 @@
 
 <BorderPane prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="poiupv.controladors.MenuController">
    <top>
-      <HBox alignment="CENTER_RIGHT" style="-fx-background-color: #1877f2;" BorderPane.alignment="CENTER">
+      <HBox alignment="CENTER_RIGHT" style="-fx-background-color: #006db5;" BorderPane.alignment="CENTER">
          <children>
             <HBox alignment="CENTER_LEFT" HBox.hgrow="ALWAYS">
                <children>
@@ -35,11 +35,23 @@
                 <Menu mnemonicParsing="false">
                   <items>
                     <MenuItem mnemonicParsing="false" onAction="#ModificarPerfil" text="Modificar Perfil" />
-                        <MenuItem mnemonicParsing="false" onAction="#MostrarResult" text="Mostrar resultados" />
-                        <MenuItem mnemonicParsing="false" onAction="#CerrarSesion" text="Cerrar sesión" />
+                        <MenuItem mnemonicParsing="false" onAction="#MostrarResult" text="Mostrar resultats" />
+                        <MenuItem mnemonicParsing="false" onAction="#CerrarSesion" text="Tancar Sessió" />
                   </items>
                      <graphic>
-                        <ImageView fx:id="avatarPerfil" fitHeight="45.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true" />
+                        <HBox alignment="CENTER" style="-fx-background-color: #006db5;">
+                           <children>
+                              <ImageView fx:id="avatarPerfil" fitHeight="45.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true" />
+                              <Text fx:id="nomUser" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
+                                 <HBox.margin>
+                                    <Insets left="10.0" right="20.0" />
+                                 </HBox.margin>
+                                 <font>
+                                    <Font name="System Bold" size="16.0" />
+                                 </font>
+                              </Text>
+                           </children>
+                        </HBox>
                      </graphic>
                 </Menu>
               </menus>
@@ -47,21 +59,13 @@
                   <Insets />
                </HBox.margin>
             </MenuBar>
-            <Text fx:id="nomUser" fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Text">
-               <HBox.margin>
-                  <Insets right="20.0" />
-               </HBox.margin>
-               <font>
-                  <Font name="System Bold" size="16.0" />
-               </font>
-            </Text>
          </children>
       </HBox>
    </top>
    <right>
       <VBox alignment="CENTER" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="botoRealizar" disable="true" ellipsisString="Realizar" mnemonicParsing="false" onAction="#RealizarProblem" style="-fx-background-color: #1877f2;" text="Realizar" textAlignment="CENTER" textFill="WHITE" VBox.vgrow="ALWAYS">
+            <Button fx:id="botoRealizar" disable="true" ellipsisString="Realizar" mnemonicParsing="false" onAction="#RealizarProblem" style="-fx-background-color: #006db5;" text="Realitzar" textAlignment="CENTER" textFill="WHITE" VBox.vgrow="ALWAYS">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
@@ -69,7 +73,7 @@
                   <Font name="System Bold" size="16.0" />
                </font>
             </Button>
-            <Button ellipsisString="Aleatorio" mnemonicParsing="false" onAction="#ProblemAleat" style="-fx-background-color: #1877f2;" text="Aleatorio" textAlignment="CENTER" textFill="WHITE" VBox.vgrow="ALWAYS">
+            <Button ellipsisString="Aleatorio" mnemonicParsing="false" onAction="#ProblemAleat" style="-fx-background-color: #006db5;" text="Aleatori" textAlignment="CENTER" textFill="WHITE" VBox.vgrow="ALWAYS">
                <VBox.margin>
                   <Insets top="20.0" />
                </VBox.margin>
